[gd_scene load_steps=8 format=3 uid="uid://ddtevdga8wph1"]

[ext_resource type="Script" path="res://Scripts/Game/Objects/Chest.gd" id="1_lg28m"]
[ext_resource type="Texture2D" uid="uid://c8aescd14087o" path="res://Assets/Game/Tileset/decoration.png" id="2_qgsj3"]
[ext_resource type="Texture2D" uid="uid://dtffvkp4kjhie" path="res://Assets/UI/HUD/keyhints.png" id="3_808ir"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5kebl"]
size = Vector2(6, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5y2sb"]
size = Vector2(6, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e25kv"]
size = Vector2(12, 14)

[sub_resource type="LabelSettings" id="LabelSettings_hu8n3"]

[node name="Chest" type="StaticBody2D"]
process_mode = 1
texture_filter = 1
collision_layer = 2
collision_mask = 0
script = ExtResource("1_lg28m")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_qgsj3")
hframes = 3
region_enabled = true
region_rect = Rect2(56, 16, 24, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_5kebl")

[node name="MouseArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseArea"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_5y2sb")

[node name="PlayerArea" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_e25kv")

[node name="Label" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0

[node name="Name" type="Label" parent="Label"]
layout_mode = 0
offset_left = -3.0
offset_top = -7.0
offset_right = 29.0
offset_bottom = 14.0
scale = Vector2(0.1, 0.1)
text = "Open"
label_settings = SubResource("LabelSettings_hu8n3")

[node name="Key" type="Sprite2D" parent="Label"]
position = Vector2(1.75, -6.2)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_808ir")
hframes = 6
vframes = 5
frame = 1

[connection signal="mouse_entered" from="MouseArea" to="." method="_on_mouse_area_mouse_entered"]
[connection signal="mouse_exited" from="MouseArea" to="." method="_on_mouse_area_mouse_exited"]
[connection signal="body_entered" from="PlayerArea" to="." method="_on_player_area_body_entered"]
[connection signal="body_exited" from="PlayerArea" to="." method="_on_player_area_body_exited"]
